--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,10 @@ header {
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+
 }
 header a {
     text-decoration: none;
@@ -129,6 +133,21 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
+    top: 100%;
+}
+
+/* nav toggle */
+#nav-toggle:checked~nav {
+    display: block;
+
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 /* main content */
@@ -136,6 +155,7 @@ main {
     background-color: lightblue;
     /*Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 50px;
 }
 
 /* footer */
