--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,8 +159,18 @@ main {
 }
 
 /* footer */
-footer {
-    background-color: orange;
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+}
+
+#social-networks i {
+    font-size: 20px;
+    padding: 5%;
+    color: #3a3a3a;
 }
 
 /* Media query tablets and larger (768px and up) */
