--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,13 @@ body {
     font-family: sans-serif;
 }
 
+h1, h2, h3{
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525
+}
+
 /* header */
 header {
     background-color: #ffffff;
@@ -101,13 +108,6 @@ header {
 header a {
     text-decoration: none;
     color: inherit;
-}
-
-h1{
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525
 }
 
 #menu {
@@ -162,6 +162,23 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/ cover;
+    position: relative;
+}
+
+#cover-text {
+    /* final rgba value sets the opacity to semi transparent  */
+    background-color: rgb(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 50px;
+    width: 80%;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
+
 }
 
 /* footer */
@@ -213,6 +230,12 @@ nav {
     main {
         /* Push main content down to accomodate larger header */
         margin-top: 79px;
+    }
+
+    /* Hero image */
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 }
 /* Media query laptops and desktop (992px and up) */
