--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,13 +172,13 @@ main {
     position: absolute;
     bottom: 50px;
     width: 80%;
+    min-height: 200px;
     padding-top: 40px;
     padding-left: 10px;
 }
 
 #cover-text > h2, #cover-text > h3 {
     color: #ffffff;
-
 }
 
 /* footer */
