--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ main {
     font-size: 20px;
 }
 #benefits p {
-    padding 0 20px;
+    padding: 0 20px;
 }
 hr {
     border-top: 1px solid #3a3a3a;
