--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,6 +283,15 @@ hr {
     color: #3a3a3a;
 }
 
+/* Media query landscape phones and large  (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+
+}
+
 /* Media query tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
@@ -342,13 +351,21 @@ nav {
         text-align: end;
         align-self: flex-end;
     }
+
+    /*Gallery*/
+    #photos {
+        column-count: 3;
+    }
 }
 /* Media query laptops and desktop (992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a
     }
-
+    /*Gallery*/
+    #photos {
+        column-count: 4;
+    }
     
 }
 
